---
title: Director Animation Choreography System
---
classDiagram
    direction TB

    %% Core orchestration class
    class Director {
        -AnimationBus bus
        -StageManager stage
        -ScrollSmoother smoother
        -Object sections
        -LandingSequence sequence

        +constructor()
        +enableDebug(enabled) void
        +getSections() Object
        +getSequence() LandingSequence
        +getStage() StageManager
        +restart() void
        +destroy() void
    }

    %% Event coordination
    class AnimationBus {
        -Map listeners
        -boolean debugEnabled

        +on(eventName, callback) Function
        +emit(eventName, data) void
        +off(eventName, callback) void
        +enableDebug(enabled) void
    }

    %% Scroll and visual effects
    class StageManager {
        -ScrollSmoother smoother
        -HTMLElement overlayView
        -HTMLVideoElement videoElement

        +constructor()
        +getSmoother() ScrollSmoother
        +addVideo() void
        +setupGelOverlay() void
        +setupPixelator() void
    }

    %% Section base class
    class BaseSection {
        <<abstract>>
        -string id
        -AnimationBus bus
        -ScrollSmoother smoother
        -HTMLElement element
        -Timeline timeline

        #constructor(id, bus, smoother)
        #createIntro()* void
        #createOutro() void
        #createScrollTriggers() void
        +playIntro() void
        +playOutro() void
        +reset() void
        +destroy() void
    }

    %% Concrete sections
    class Hero {
        -Timeline rollTimeline

        +constructor(bus, smoother)
        +createIntro() void
        +createScrollTriggers() void
    }

    class Work {
        +constructor(bus, smoother)
        +createIntro() void
        +createScrollTriggers() void
    }

    class Biography {
        +constructor(bus, smoother)
        +createIntro() void
        +createScrollTriggers() void
    }

    %% Sequence choreography
    class LandingSequence {
        -AnimationBus bus
        -Object sections

        +constructor(bus, sections)
        +setupSequence() void
        +start() void
        +reset() void
        +destroy() void
    }

    %% GSAP library (external)
    class ScrollSmoother {
        <<external>>
        +scrollTo(target) void
        +paused(state) boolean
    }

    class Timeline {
        <<external>>
        +from(target, vars) Timeline
        +to(target, vars) Timeline
        +play() Timeline
        +pause() Timeline
        +reverse() Timeline
        +restart() Timeline
    }

    %% Relationships
    Director *-- "1" AnimationBus : creates
    Director *-- "1" StageManager : creates
    Director o-- "0..1" ScrollSmoother : references
    Director *-- "3" BaseSection : creates (hero, work, bio)
    Director *-- "1" LandingSequence : creates

    BaseSection <|-- Hero : extends
    BaseSection <|-- Work : extends
    BaseSection <|-- Biography : extends

    BaseSection o-- AnimationBus : uses
    BaseSection o-- ScrollSmoother : uses
    BaseSection *-- Timeline : owns

    LandingSequence o-- AnimationBus : uses
    LandingSequence --> BaseSection : coordinates

    StageManager o-- ScrollSmoother : manages

    %% Notes
    note for Director "Master coordinator\nAuto-initializes on DOMContentLoaded\nGlobal access: window.director"
    note for AnimationBus "Pub/sub event system\nDecouples animation coordination"
    note for BaseSection "Abstract foundation\nAll sections must extend\nImplements lifecycle methods"
    note for LandingSequence "Event-driven choreography\nDefines animation flow\nReacts to section events"

    %% Styling for visual hierarchy
    style Director fill:#e1f5ff,stroke:#01579b,stroke-width:3px
    style AnimationBus fill:#fff3e0,stroke:#e65100,stroke-width:2px
    style StageManager fill:#f1f8e9,stroke:#33691e,stroke-width:2px
    style BaseSection fill:#fce4ec,stroke:#880e4f,stroke-width:2px
    style LandingSequence fill:#f3e5f5,stroke:#4a148c,stroke-width:2px